<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".notnow.WelcomeActivity" >


    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="80dp"
        android:paddingBottom="2dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:src="@drawable/utis" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginBottom="4dp"
        android:textSize="12sp"
        android:gravity="center_horizontal"
        android:text="@string/title_welcome"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:gravity="center_horizontal"
        android:text="@string/title_soft_welcome"
        android:textColor="@color/title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewVer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginBottom="4dp"
        android:textSize="12sp"
        android:gravity="center_horizontal"
        android:text="@string/title_activity_welcome"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/auth_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignLeft="@+id/textViewVer"
        android:layout_marginBottom="4dp"
        android:layout_below="@+id/textViewVer"
        android:text="@string/title_auth" />

    <TextView
        android:id="@+id/requestView"
        android:layout_below="@+id/auth_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:text="ip" />
    <Button
        android:id="@+id/auth_name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textColor="@color/title"
        android:textStyle="bold"
        android:alpha="0.7"
        android:layout_centerHorizontal="true"
		android:layout_below="@+id/requestView"
        android:text="@string/action_sign_in_short" />


</RelativeLayout>